# ServerWitch-API

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  hypercorn.toml  logging.toml  pyproject.toml
GPT/: openapi.yaml  serverwitch.txt
nginx/: Dockerfile  certbot-cron  certbot.sh  default.conf  entrypoint.sh  ip-whitelist.conf  real-ip.conf
src/serverwitch_api/: __init__.py  broker.py
